move connect to DB in services file,fixed z-index on footer

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -9,6 +9,7 @@ body {
    width: 100%;
    height: 40px;
    padding: 5px;
+    z-index: 2;
 }
 
 #card-message {
